--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
+
 title: Tafirest
 email: hello@tafirest.com
 description: >- # this means to ignore newlines until "baseurl:"
@@ -31,6 +32,14 @@ facebook_username: tafirest
 
 # Build settings
 theme: minima
+markdown: kramdown
+highlighter: rouge
+
+kramdown:
+  input: GFM
+  auto_ids: true
+  syntax_highlighter: rouge
+  
 plugins:
   - jekyll-feed
 
